fix: font added, join and demo link added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cedro Finance | Lend and borrow the assets with cross-chain decentralized liquidity protocol.</title>
+    <meta name="description" content="Cedro Finance is a cross-chain decentralized liquidity protocol where users can lend and borrow the listed assets.">
+    
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Cedro Finance | Lend and borrow the assets with cross-chain decentralized liquidity protocol.">
+    <meta property="og:description" content="Cedro Finance is a cross-chain decentralized liquidity protocol where users can lend and borrow the listed assets.">
+    
+    <link rel="icon" type="image/svg+xml" href="/assets/icons/cedro-logo.svg" />
+    <meta name="theme-color" content="#ffffff">
+    </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
