fix: logo added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Cedro Finance | Lend and borrow the assets with cross-chain decentralized liquidity protocol.">
     <meta property="og:description" content="Cedro Finance is a cross-chain decentralized liquidity protocol where users can lend and borrow the listed assets.">
     
-    <link rel="icon" type="image/svg+xml" href="/assets/icons/cedro-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="./logo.svg" />
     <meta name="theme-color" content="#ffffff">
     </head>
 
